# cyberbrein-poc

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: .ci.yml.swp
.github/workflows/: ci.yml
docs/: architecture-boundaries.md  collection-bevindingen.md
experiments/: gps.py  wifi_collector.py
src/cyberbrein/: __init__.py
src/cyberbrein/collection/: __init__.py  __main__.py  channel_hopper.py  cli.py  collector.py  frame_parser.py  gpsd_client.py  interface_manager.py  models.py  sqlite_writer.py
src/cyberbrein/ingestion/: __init__.py  models.py  service.py  sqlite_reader.py  validator.py
src/cyberbrein/privacy/: pseudonymizer.py
tests/: conftest.py
tests/integration/collection/: test_sqlite_writer.py
tests/integration/ingestion/: test_sqlite_ingestion.py
tests/unit/: test_pseudonymizer.py
tests/unit/collection/: test_channel_hopper.py  test_collector.py  test_frame_parser.py  test_gpsd_client.py  test_interface_manager.py
tests/unit/ingestion/: test_pseudonymizer.py  test_validator.py
