[project]
name = "cyberbrein-exposure-poc"
version = "0.1.0"
description = "Proof of concept voor passieve Wi-Fi-meetdata, datapipeline en GIS-dashboard."
requires-python = ">=3.11"
dependencies = [
    "scapy",
    "pandas",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
