[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberbrein-exposure-poc"
version = "0.1.0"
description = "Proof of concept voor passieve Wi-Fi-meetdata, datapipeline en GIS-dashboard."
requires-python = ">=3.11"
dependencies = [
    "folium",
    "geopandas",
    "pandas",
    "plotly",
    "psycopg2-binary",
    "pyproj",
    "python-dotenv",
    "scapy",
    "sqlalchemy",
    "streamlit",
    "streamlit-folium",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
